Refactors the crawler into it's own module. Makes the crawler more robust by using the .NET Uri API instead of parsing manually. The Crawler now parses the HTML Document properly instead of doing a scuffed Regex search.

--- a/fsharp-problems.fsproj
+++ b/fsharp-problems.fsproj
@@ -1,13 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <RootNamespace>fsharp_problems</RootNamespace>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>fsharp_problems</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="src/crawler.fs" />
+    <Compile Include="src/Program.fs" />
   </ItemGroup>
-
+  <Import Project=".paket\Paket.Restore.targets" />
 </Project>
